--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="blue_200">#FF136DCE</color>
     <color name="blue_500">#FF136DCE</color>
     <color name="blue_700">#FF0057B3</color>
+    <color name="dark_blue_700">#133A63</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg_gray">#ECECEC</color>
 </resources>
